// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Register with OpenMetrics type should not output all initialized metrics at value 0 if labels 1`] = `
"# HELP counter help
# TYPE counter counter
# HELP gauge help
# TYPE gauge gauge
# HELP histogram help
# TYPE histogram histogram
# HELP summary help
# TYPE summary summary
# EOF
"
`;

exports[`Register with OpenMetrics type should not output all initialized metrics at value 0 if labels and exemplars enabled 1`] = `
"# HELP counter help
# TYPE counter counter
# HELP gauge help
# TYPE gauge gauge
# HELP histogram help
# TYPE histogram histogram
# HELP summary help
# TYPE summary summary
# EOF
"
`;

exports[`Register with OpenMetrics type should output all initialized metrics at value 0 1`] = `
"# HELP counter help
# TYPE counter counter
counter_total 0
# HELP gauge help
# TYPE gauge gauge
gauge 0
# HELP histogram help
# TYPE histogram histogram
histogram_bucket{le="0.005"} 0
histogram_bucket{le="0.01"} 0
histogram_bucket{le="0.025"} 0
histogram_bucket{le="0.05"} 0
histogram_bucket{le="0.1"} 0
histogram_bucket{le="0.25"} 0
histogram_bucket{le="0.5"} 0
histogram_bucket{le="1"} 0
histogram_bucket{le="2.5"} 0
histogram_bucket{le="5"} 0
histogram_bucket{le="10"} 0
histogram_bucket{le="+Inf"} 0
histogram_sum 0
histogram_count 0
# HELP summary help
# TYPE summary summary
summary{quantile="0.01"} 0
summary{quantile="0.05"} 0
summary{quantile="0.5"} 0
summary{quantile="0.9"} 0
summary{quantile="0.95"} 0
summary{quantile="0.99"} 0
summary{quantile="0.999"} 0
summary_sum 0
summary_count 0
# EOF
"
`;

exports[`Register with Prometheus type should not output all initialized metrics at value 0 if labels 1`] = `
"# HELP counter help
# TYPE counter counter

# HELP gauge help
# TYPE gauge gauge

# HELP histogram help
# TYPE histogram histogram

# HELP summary help
# TYPE summary summary
"
`;

exports[`Register with Prometheus type should output all initialized metrics at value 0 1`] = `
"# HELP counter help
# TYPE counter counter
counter 0

# HELP gauge help
# TYPE gauge gauge
gauge 0

# HELP histogram help
# TYPE histogram histogram
histogram_bucket{le="0.005"} 0
histogram_bucket{le="0.01"} 0
histogram_bucket{le="0.025"} 0
histogram_bucket{le="0.05"} 0
histogram_bucket{le="0.1"} 0
histogram_bucket{le="0.25"} 0
histogram_bucket{le="0.5"} 0
histogram_bucket{le="1"} 0
histogram_bucket{le="2.5"} 0
histogram_bucket{le="5"} 0
histogram_bucket{le="10"} 0
histogram_bucket{le="+Inf"} 0
histogram_sum 0
histogram_count 0

# HELP summary help
# TYPE summary summary
summary{quantile="0.01"} 0
summary{quantile="0.05"} 0
summary{quantile="0.5"} 0
summary{quantile="0.9"} 0
summary{quantile="0.95"} 0
summary{quantile="0.99"} 0
summary{quantile="0.999"} 0
summary_sum 0
summary_count 0
"
`;
